--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,58 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
+    <header class="header">
+        <div class="header__inner">
+            <a class="logo" href="#">
+                <img class="logo__img" src="images/logo.png" alt="logo">
+            </a>
+            <nav class="menu">
+                <ul class="menu__list">
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">Home +</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">About</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">Services</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">Pages +</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">News</a>
+                    </li>
+                    <li class="menu__list-item">
+                        <a class="menu__list-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="user-nav">
+                <a class="user-nav__link user-nav__link--search" href="#">
+                    <img class="user-nav__link-img" src="images/icons/search.svg" alt="menu items">
+                </a>
+                
+                <a class="user-nav__link user-nav__link--heart" href="#">
+                    <img class="user-nav__link-img" src="images/icons/heart.svg" alt="menu items">
+                    <span class="user-nav__num">0</span>
+                </a>
+                <a class="user-nav__link user-nav__link--kart" href="#">
+                    <img class="user-nav__link-img" src="images/icons/kart.svg" alt="menu items">
+                    <span class="user-nav__num">0</span>
+                </a>
+            
+                <a class="user-nav__link user-nav__link--points" href="#">
+                    <img class="user-nav__link-img" src="images/icons/points.svg" alt="menu items">
+                </a>
+            </div>
+        </div>
+    </header>
 
 
     <script src="js/main.min.js"></script>
 </body>
-</html> 
+
+</html>
