added about, login and terms pages

--- a/app/shop.html
+++ b/app/shop.html
@@ -58,7 +58,58 @@
         </div>
     </header>
     <main class="main">
-        
+        <section class="breadcrumbs">
+            <div class="container">
+                <h3 class="breadcrumbs__title">
+                    Product list 1
+                </h3>
+                <ul class="breadcrumbs__list">
+                    <li class="breadcrumbs__list-item">
+                        <a class="breadcrumbs__list-link" href="#">
+                            Home
+                        </a>
+                    </li>
+                    <li class="breadcrumbs__list-item">
+                        <span class="breadcrumbs__list-link" href="#">
+                            Product list 1
+                        </span>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="shop">
+            <div class="container">
+                <div class="shop__inner">
+                    <div class="shop__filters filter">
+                        <div class="filter__item filter-category">
+                            <h3 class="filter__title">
+                                CATEGORY
+                            </h3>
+                            <form class="filter-category__form" action="#">
+                                <input class="filter-category__input" type="text">
+                                <input class="filter-category__input" type="text">
+                                <input class="filter-category__input" type="text">
+                                <input class="filter-category__input" type="text">
+                                <input class="filter-category__input" type="text">
+                            </form>
+                        </div>
+                        <div class="filter__item">
+                            <h3 class="filter__title">
+                                PRICE
+                            </h3>
+                        </div>
+                    </div>
+                    <div class="shop__items">
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
     </main>
     <footer class="footer">
         <div class="container">
